testdata/baselines/reference/submodule/compiler/jsFileCompilationReturnTypeSyntaxOfFunction.errors.txt
a.js(1,15): error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.


==== a.js (1 errors) ====
    function F(): number { }
                  ~~~~~~
!!! error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.